# udm2

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.config/: default.toml  default.yml  local.toml  local.yml  test_udm.db
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: action.yml  rust.yml
docs/: diagram.puml
protos/: drink_controller.proto  drink_controller_server.proto  fhs.proto  gpio.proto  instruction.proto  recipe.proto  server.proto  service.proto
protos/sys/: fhs.proto  recipe.proto  service.proto
protos/system/: gpio_system.proto  model.proto
protos/test/: test.proto
scripts/: install_protolint.sh  linter_checks.sh
src/: main.rs
src/daemon/: cli.rs  main.rs
src/lib/: error.rs  lib.rs
src/lib/cli/: mod.rs
src/lib/db/: executor.rs  mod.rs  sqlite.rs
src/lib/db/postgres/: conn.rs  mod.rs
src/lib/db/sqlite/: conn.rs  mod.rs
src/lib/logger/: mod.rs
src/lib/parsers/: mod.rs  settings.rs
src/lib/rpc_types/: drink_controller.rs  drink_ctrl_types.rs  fhs_types.rs  gpio_types.rs  mod.rs  recipe_types.rs  server.rs  service_types.rs
src/lib/system/: gpio.rs
sys/: README.md
sys/src/lib/logger/: mod.rs
tests/: integration_test.rs
