[package]
name = "udm"
version = "0.1.0"
edition = "2021"
default-run = "udm"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "udm"
path = "src/bin/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"
env_logger ={ version = "0.11.3"}
rusqlite = { version = "0.30.0", features = ["bundled"] }
mockall = "0.12.1"
config = "0.13.4"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
sea-query = "0.30.5"
serde = "1.0.193"
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic-reflection = "0.10.2"
postgres = "0.19.7"
thiserror = "1.0.56"
tokio-postgres = "0.7.10"
async-trait = "0.1.77"
tokio-rusqlite = "0.5.0"
serde_derive = "1.0.196"
serde_json = "1.0.113"
anyhow = "1.0.80"
regex = "1.10.3"
cli-table = "0.4.7"
clap-verbosity-flag = "2.2.0"
pretty_env_logger = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
tracing-json = "0.1.0"

[build-dependencies]
tonic-build = "0.10.2"
